<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_min2"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/line_name" />

        <EditText
            android:id="@+id/et_line_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_min2"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/line_point" />

        <TextView
            android:id="@+id/tv_select_point"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingLeft="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_min2"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/btn_load"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/load" />

        <Button
            android:id="@+id/btn_new"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/line_new" />

        <Button
            android:id="@+id/btn_draw"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/line_draw" />

        <Button
            android:id="@+id/btn_remove"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/remove" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selected_point"
        android:padding="10dp"/>

    <ListView
        android:id="@+id/lv_point"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>